--- a/src/styles/review-list.css
+++ b/src/styles/review-list.css
@@ -13,7 +13,7 @@
 
 .review-item {
   border-radius: 8px;
-  margin: 15px 20px;
+  margin: 15px auto;
   max-width: 250px;
   padding: 10px 18px;
   background: rgb(250, 250, 250);
